// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders correctly for anonymous desktop 1`] = `
<header
  className="site-header-desktop"
>
  <a
    className="nav-skip sr-only sr-only-focusable"
    href="#main"
  >
    Skip to main content
  </a>
  <div
    className="container-fluid"
  >
    <div
      className="custom-header-container"
    >
      <div
        className="nav-container position-relative d-flex align-items-center"
      >
        <a
          className="logo"
          href="http://localhost:18000/dashboard"
        >
          <img
            alt="edX"
            className="d-block"
            src="https://edx-cdn.org/v3/default/logo.svg"
          />
        </a>
        <nav
          aria-label="Main"
          className="nav main-nav"
        />
        <nav
          aria-label="Secondary"
          className="nav secondary-menu-container align-items-center ml-auto"
        >
          <a
            className="btn mr-2 btn-link"
            href="http://localhost:18000/login"
          >
            Login
          </a>
          <a
            className="btn mr-2"
            href="http://localhost:18000/register"
          >
            Sign Up
          </a>
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`<Header /> renders correctly for anonymous mobile 1`] = `
<header
  aria-label="Main"
  className="site-header-mobile d-flex justify-content-between align-items-center shadow sticky-top"
>
  <a
    className="nav-skip sr-only sr-only-focusable"
    href="#main"
  >
    Skip to main content
  </a>
  <div
    className="w-100 d-flex justify-content-center"
  >
    <a
      className="logo"
      href="http://localhost:18000/dashboard"
      itemType="http://schema.org/Organization"
    >
      <img
        alt="edX"
        className="d-block"
        src="https://edx-cdn.org/v3/default/logo.svg"
      />
    </a>
  </div>
  <div
    className="w-100 d-flex justify-content-end align-items-center"
  >
    <nav
      aria-label="Secondary"
      className="menu position-static"
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup="menu"
        aria-label="Account Menu"
        className="menu-trigger icon-button"
        onClick={[Function]}
        title="Account Menu"
      >
        <span
          className="avatar overflow-hidden d-inline-flex rounded-circle null"
          style={
            {
              "height": "1.5rem",
              "width": "1.5rem",
            }
          }
        >
          <svg
            aria-hidden={true}
            className="tabler-icon tabler-icon-user "
            fill="none"
            focusable="false"
            height={24}
            role="img"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
            style={
              {
                "height": "1.5rem",
                "width": "1.5rem",
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
            />
            <path
              d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
            />
          </svg>
        </span>
      </button>
    </nav>
  </div>
</header>
`;

exports[`<Header /> renders correctly for authenticated desktop 1`] = `
<header
  className="site-header-desktop"
>
  <a
    className="nav-skip sr-only sr-only-focusable"
    href="#main"
  >
    Skip to main content
  </a>
  <div
    className="container-fluid"
  >
    <div
      className="custom-header-container"
    >
      <div
        className="nav-container position-relative d-flex align-items-center"
      >
        <a
          className="logo"
          href="http://localhost:18000/dashboard"
        >
          <img
            alt="edX"
            className="d-block"
            src="https://edx-cdn.org/v3/default/logo.svg"
          />
        </a>
        <nav
          aria-label="Main"
          className="nav main-nav"
        >
          <a
            className="nav-link"
            href="undefined/dashboard"
            onClick={null}
          >
            Courses
          </a>
        </nav>
        <nav
          aria-label="Secondary"
          className="nav secondary-menu-container align-items-center ml-auto"
        >
          <div
            className="menu null"
            onKeyDown={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <button
              aria-expanded={false}
              aria-haspopup="menu"
              aria-label="Account menu for edX"
              className="menu-trigger d-inline-flex align-items-center bg-transparent border-0 p-0"
              onClick={[Function]}
            >
              <span
                className="avatar overflow-hidden d-inline-flex rounded-circle null"
                style={
                  {
                    "height": "1.5em",
                    "width": "1.5em",
                  }
                }
              >
                <svg
                  aria-hidden={true}
                  className="tabler-icon tabler-icon-user "
                  fill="none"
                  focusable="false"
                  height={24}
                  role="img"
                  stroke="currentColor"
                  strokeLinecap="round"
                  strokeLinejoin="round"
                  strokeWidth={2}
                  style={
                    {
                      "height": "1.5em",
                      "width": "1.5em",
                    }
                  }
                  viewBox="0 0 24 24"
                  width={24}
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
                  />
                  <path
                    d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
                  />
                </svg>
              </span>
            </button>
          </div>
        </nav>
      </div>
    </div>
  </div>
</header>
`;

exports[`<Header /> renders correctly for authenticated mobile 1`] = `
<header
  aria-label="Main"
  className="site-header-mobile d-flex justify-content-between align-items-center shadow sticky-top"
>
  <a
    className="nav-skip sr-only sr-only-focusable"
    href="#main"
  >
    Skip to main content
  </a>
  <div
    className="w-100 d-flex justify-content-start"
  >
    <div
      className="menu position-static"
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup="menu"
        aria-label="Main Menu"
        className="menu-trigger icon-button"
        onClick={[Function]}
        title="Main Menu"
      >
        <svg
          aria-hidden={true}
          focusable="false"
          height="24px"
          role="img"
          style={
            {
              "height": "1.5rem",
              "width": "1.5rem",
            }
          }
          version="1.1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="5"
          />
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="11"
          />
          <rect
            fill="currentColor"
            height="2"
            width="20"
            x="2"
            y="17"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="w-100 d-flex justify-content-center"
  >
    <a
      className="logo"
      href="http://localhost:18000/dashboard"
      itemType="http://schema.org/Organization"
    >
      <img
        alt="edX"
        className="d-block"
        src="https://edx-cdn.org/v3/default/logo.svg"
      />
    </a>
  </div>
  <div
    className="w-100 d-flex justify-content-end align-items-center"
  >
    <nav
      aria-label="Secondary"
      className="menu position-static"
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <button
        aria-expanded={false}
        aria-haspopup="menu"
        aria-label="Account Menu"
        className="menu-trigger icon-button"
        onClick={[Function]}
        title="Account Menu"
      >
        <span
          className="avatar overflow-hidden d-inline-flex rounded-circle null"
          style={
            {
              "height": "1.5rem",
              "width": "1.5rem",
            }
          }
        >
          <svg
            aria-hidden={true}
            className="tabler-icon tabler-icon-user "
            fill="none"
            focusable="false"
            height={24}
            role="img"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth={2}
            style={
              {
                "height": "1.5rem",
                "width": "1.5rem",
              }
            }
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 7a4 4 0 1 0 8 0a4 4 0 0 0 -8 0"
            />
            <path
              d="M6 21v-2a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v2"
            />
          </svg>
        </span>
      </button>
    </nav>
  </div>
</header>
`;
